<resources>
    <string name="app_name">Aston Intensive Course Project</string>

    <string name="text_connection_restored">Connection restored</string>
    <string name="text_connection_is_lost">No internet - offline mode</string>

    <string name="tab_item_view_image_desc">Tab icon</string>

    <string name="text_tab_characters">Characters</string>
    <string name="text_tab_locations">Locations</string>
    <string name="text_tab_episodes">Episodes</string>

    <string name="item_image_desc">Item image</string>

    <string name="text_search_hint">Search</string>
    <string name="text_start_search">Start searching</string>

    <string name="common_tab_search_toolbar_btn_cancel_desc">Cancel searching</string>
    <string name="common_tab_search_toolbar_btn_clear_desc">Clear searching field</string>
    <string name="common_tab_search_toolbar_btn_search_desc">Search</string>
    <string name="common_tab_search_toolbar_btn_filter_desc">Filters</string>

    <string name="filter_gender_item_female" translatable="false">Female</string>
    <string name="filter_gender_item_male" translatable="false">Male</string>
    <string name="filter_gender_item_genderless" translatable="false">Genderless</string>
    <string name="filter_gender_item_unknown" translatable="false">Unknown</string>
    <string name="filter_gender_item_none">None</string>

    <string name="filter_status_item_alive" translatable="false">Alive</string>
    <string name="filter_status_item_dead" translatable="false">Dead</string>
    <string name="filter_status_item_unknown" translatable="false">Unknown</string>
    <string name="filter_status_item_none">None</string>

    <string name="filter_season_item_s01" translatable="false">S01</string>
    <string name="filter_season_item_s02" translatable="false">S02</string>
    <string name="filter_season_item_s03" translatable="false">S03</string>
    <string name="filter_season_item_s04" translatable="false">S04</string>
    <string name="filter_season_item_s05" translatable="false">S05</string>
    <string name="filter_season_item_none">None</string>

    <string name="filter_episode_item_e01" translatable="false">E01</string>
    <string name="filter_episode_item_e02" translatable="false">E02</string>
    <string name="filter_episode_item_e03" translatable="false">E03</string>
    <string name="filter_episode_item_e04" translatable="false">E04</string>
    <string name="filter_episode_item_e05" translatable="false">E05</string>
    <string name="filter_episode_item_e06" translatable="false">E06</string>
    <string name="filter_episode_item_e07" translatable="false">E07</string>
    <string name="filter_episode_item_e08" translatable="false">E08</string>
    <string name="filter_episode_item_e09" translatable="false">E09</string>
    <string name="filter_episode_item_e10" translatable="false">E10</string>
    <string name="filter_episode_item_e11" translatable="false">E11</string>
    <string name="filter_episode_item_none">None</string>

    <string name="text_btn_retry">Retry</string>
    <string name="text_btn_go_offline">Go Offline</string>
    <string name="text_error_loading">Error loading</string>

    <string name="text_filter">Filter</string>
    <string name="text_apply">Apply</string>
    <string name="text_reset">Reset</string>
    <string name="text_item_status">Status:</string>
    <string name="text_item_species">Species:</string>
    <string name="text_item_type">Type:</string>
    <string name="text_item_gender">Gender:</string>
    <string name="text_item_name">Name:</string>
    <string name="text_item_episode_name">Episode name:</string>
    <string name="text_item_dimension">Dimension:</string>
    <string name="text_item_season">Season:</string>
    <string name="text_item_episode">Episode:</string>
    <string name="text_item_release_date">Release date:</string>
    <string name="text_item_air_date">Air date:</string>

    <string name="text_title_origin">Origin</string>
    <string name="text_title_location">Location</string>
    <string name="text_title_episodes">Episodes</string>
    <string name="text_title_residents">Residents</string>
    <string name="text_title_characters">Characters</string>

    <string name="text_details_item_empty" translatable="false">-</string>

    <string name="characters_tab_bottom_sheet_edit_text_hint_species" translatable="false">Human / Alien etc...</string>
    <string name="characters_tab_bottom_sheet_edit_text_hint_type" translatable="false">Human / Superhuman etc...</string>
    <string name="locations_tab_bottom_sheet_edit_text_hint_name">The name of location</string>
    <string name="locations_tab_bottom_sheet_edit_text_hint_type">The type of location</string>
    <string name="locations_tab_bottom_sheet_edit_text_hint_dimension">The dimension of location</string>
    <string name="episodes_tab_bottom_sheet_edit_text_hint_name">The name of episode</string>
    <string name="episodes_tab_bottom_sheet_edit_text_hint_episode">The episode\u0027s code</string>
</resources>