<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="horizontal"
    android:background="@color/color_primary_overlay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/base_tab_search_toolbar_search_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/app_indent_big"
        android:background="@drawable/base_tab_search_toolbar_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/base_tab_search_toolbar_btn_filter">

        <ImageButton
            android:id="@+id/base_tab_search_toolbar_btn_search"
            style="@style/BaseTabSearchToolbar.Button"
            android:contentDescription="@string/common_tab_search_toolbar_btn_search_desc"
            android:src="@drawable/ic_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/base_tab_search_toolbar_btn_cancel"
            style="@style/BaseTabSearchToolbar.Button"
            android:layout_gravity="center|start"
            android:contentDescription="@string/common_tab_search_toolbar_btn_cancel_desc"
            android:src="@drawable/ic_back_searching"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/base_tab_search_toolbar_text_search"
            style="@style/BaseTabSearchToolbar.Text.TextView"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:text="@string/text_start_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/base_tab_search_toolbar_btn_clear"
            app:layout_constraintStart_toEndOf="@id/base_tab_search_toolbar_btn_search"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/base_tab_search_toolbar_edit_text_search"
            style="@style/BaseTabSearchToolbar.Text.EditTextSearch"
            android:autofillHints="no"
            android:background="@android:color/transparent"
            android:gravity="start|center"
            android:hint="@string/text_search_hint"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/base_tab_search_toolbar_btn_clear"
            app:layout_constraintStart_toEndOf="@id/base_tab_search_toolbar_btn_cancel"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="textNoSuggestions" />

        <ImageButton
            android:id="@+id/base_tab_search_toolbar_btn_clear"
            style="@style/BaseTabSearchToolbar.Button"
            android:contentDescription="@string/common_tab_search_toolbar_btn_clear_desc"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:layout_marginEnd="@dimen/app_indent_normal"
        android:id="@+id/base_tab_search_toolbar_btn_filter"
        style="@style/BaseTabSearchToolbar.Button"
        android:contentDescription="@string/common_tab_search_toolbar_btn_filter_desc"
        android:src="@drawable/ic_filter"
        app:layout_constraintStart_toEndOf="@id/base_tab_search_toolbar_search_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>