<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_indent_normal"
    android:background="@color/color_primary_overlay"
    android:padding="@dimen/app_indent_normal">

    <LinearLayout
        android:id="@+id/item_error_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/item_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="56dp"
            android:padding="@dimen/app_indent_normal"
            android:text="@string/text_error_loading"
            android:textAppearance="@style/AppTextNormal.BaseTextView"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_error_btn_retry"
                style="@style/AppTextNormal.TextViewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="@dimen/item_error_btn_min_width"
                android:text="@string/text_btn_retry"
                app:layout_constraintEnd_toStartOf="@id/item_error_btn_offline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_error_btn_offline"
                style="@style/AppTextNormal.TextViewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:minWidth="@dimen/item_error_btn_min_width"
                android:text="@string/text_btn_go_offline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_error_btn_retry"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/item_progress"
        style="?android:indeterminateProgressStyle"
        android:layout_width="@dimen/item_progress_size"
        android:layout_height="@dimen/item_progress_size"
        android:layout_gravity="center" />

</FrameLayout>

